<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:imeOptions="actionNext"
    android:orientation="vertical"
    tools:context="zbish.com.kithenhelper.AddRecipe"
    android:background="@drawable/background"><![CDATA[
    >


    ]]>

    <EditText
        android:id="@+id/TXTrecipeName"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/recipe_add_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TXTIngridiants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredients"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#55000000"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/myListOfIngridient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_name"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/TXTINgridiantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:layout_weight="1"
            android:hint="@string/flower"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingredient_Amount"
            android:textAlignment="viewStart"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/TXTINgridiantAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:hint="1.5"
            android:inputType="numberDecimal"
            android:nextFocusDown="@+id/BTNAddIngridiant"
            android:textAlignment="viewStart"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TXTunitofmasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UnitOfMasure"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radioMasure"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/unit" />

            <RadioButton
                android:id="@+id/Gram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/gram" />

            <RadioButton
                android:id="@+id/Liter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liter" />

            <Button
                android:id="@+id/BTNAddIngridiant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredient_add"
                />

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/EDTDesciption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/recipeDescription"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EDTAmountRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredient_Amount"
        android:inputType="number" />

    <Button
        android:id="@+id/BTAaddrecipe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_add" />

</LinearLayout>
