<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#33FFFFFF"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_Amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/TXTamount"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/TXVrecipename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:lines="2"
        android:maxWidth="100dp"
        android:text="@string/recipe_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="22sp"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chef_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/chef"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/TXTamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_Amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/TXTcount"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/TXTcount" />

    <TextView
        android:id="@+id/TXTcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="count"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/chef_image" />

    <TextView
        android:id="@+id/TXTrecipedescripation"
        android:layout_width="257dp"
        android:layout_height="51dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="8dp"
        android:lines="3"
        android:maxWidth="170dp"
        android:text="@string/recipeDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXVrecipename"
        android:layout_marginEnd="13dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberOfingridients"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>